# UniPD-CS-bacherol

./: .gitignore  README.md  esame
APP/: concorrenza.md  distribuita.md  java.md  programmazione-distribuita.md  reattivita.md  streams.md  vertx.md
ASD/: es.txt  main.cpp
ASD/duplicate/: duplicate  duplicate.cpp
ASD/esame10-7/: es1  es1.cpp  greedy_sel  greedy_sel.cpp
ASD/insertionsort-rec/: insertionsort-rec  insertionsort-rec.cpp
ASD/sumverify/: sumverify.cpp
Bacherol/APP/: programmazione-concorrente.md
Bacherol/ASD/: es.txt
Bacherol/basi/: esame.sql
Bacherol/introduzione-apprendimento-automatico/: Machine Learning.md
Bacherol/tec-web/: CSS2.md  CSS3.md
Basi/: esame.sql
Basi/population/: db.sql  query.sql
PAO/3Tree/: Tree.h  main.cpp  soluzione  soluzione.cpp
PAO/DList/: DList.h  dlist  main.cpp  soluzione  soluzione.cpp
PAO/QT/MyWidget/: CMakeLists.txt  MyWidget.cpp  MyWidget.h  main.cpp
PAO/QT/Tris/: CMakeLists.txt  Tris.pro  button.cpp  button.h  controller.cpp  controller.h  main.cpp  model.cpp  model.h  moveexception.cpp  moveexception.h  resources.qrc  tictactoe.cpp  tictactoe.h
PAO/QT/Tris/resources/: style.css
PAO/QT/parent-window/: CMakeLists.txt  main.cpp
PAO/QT/sliders/: CMakeLists.txt  LCDRange.cpp  LCDRange.h  MyWidget.cpp  MyWidget.h  main.cpp
PAO/bolletta/: Bolletta.h
PAO/documentations/: exception-handling.md
PAO/documentazione/: QT.md  exception-handling.md  input-output.md  multiple-hierarchy.md  project.md
PAO/dqueue/: dqueue  dqueue.h  main.cpp
PAO/esame/: es3  es3.cpp
PAO/hierarchy/: main.cpp
PAO/multiinfo/: multiinfo
PAO/multiple-hierarchy/: input-output.md  multiple-hierarchy.md  project.md
PAO/point/: main.cpp
PAO/queue/: queue.h
SWE/: diagramma-delle-classi.mdj
TecWeb/: CSS.md  HTML5.md  XHTML.html  XHTML.md
altri-paradigmi-di-programmazione/: concorrenza.md  java.md
calcolo-numerico/: es4.m
ricerca-operativa/: Risolutori.md  ampl.md
tec-web/: CSS.md  CSS3.md  HTML5.md  XHTML.html  XHTML.md  test-tabelle.html  test.html
tecnologie-open-source/: gitflow.md
(+594 files in other folders)
